# PythonAsyncParallelWebFetching

./: README.md  pyproject.toml
app/: main.py
app/fetchers/: asyncio.py  sync.py  thread_pool.py
