[tool.poetry]
name = "pythonasyncparallel"
version = "0.1.0"
description = ""
authors = ["Ryo Kuroyanagi"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.9.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
